# trabajo-practico-base-de-datos-2

./: ANALISIS_COMPLETITUD.md  CONSIGNA.md  CORRECCIONES_2025-01-20.md  CORRER.md  Dockerfile  FLUJO_CURSOS.md  GUIA_BASES_DATOS.md  PLAN_IMPLEMENTACION.md  README (OLD).md  README.md  SKILLS_GESTIONABLES.md  SOLUCIÓN.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt  sync_antonella.py  temp_gen_hash.py  update_admin.sql
deploy/mongo/: init.js
deploy/neo4j/: bootstrap.cql
deploy/postgres/: init.sql
frontend/src/: App.css  App.jsx
frontend/src/api/: axios.js
frontend/src/components/: ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AdminCursos.jsx  Candidatos.jsx  CrearCandidato.jsx  Cursos.jsx  Dashboard.jsx  DashboardEmpresa.jsx  DetalleOferta.jsx  Login.jsx  Matching.jsx  MiHistorialLaboral.jsx  MisAplicaciones.jsx  MisCursos.jsx  MisSkills.jsx  Ofertas.jsx  Procesos.jsx  PublicarOferta.jsx  RedContactos.jsx  Register.jsx
src/: auth.py  database.py  events.py  main.py  models.py
