[tool.poetry]
name = "talentum-plus"
version = "0.1.0"
description = "Core services for Talentum+ platform"
authors = ["Talentum Team <tech@talentum.plus>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
pydantic = "^2.7.4"
python-dotenv = "^1.0.1"
pymongo = "^4.7.2"
redis = "^5.0.4"
psycopg2-binary = "^2.9.9"
neo4j = "^5.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"